* fix header visibility * change type of Fade animation * eliminate unnecessary code

--- a/src/styles.css
+++ b/src/styles.css
@@ -381,17 +381,12 @@ header {
   overflow: hidden;
   border-bottom: 1px solid #d1d5da;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
-
-  /* opacity: 0; */
-  /* visibility: hidden; */
-  -webkit-transition: all 0.7s ease-in-out;
-  -moz-transition: all 0.7s ease-in-out;
-  -ms-transition: all 0.7s ease-in-out;
-  -o-transition: all 0.7s ease-in-out;
-  transition: all 0.7s ease-in-out;
 }
 header a {
   cursor: pointer;
+}
+#header-bar.none {
+  display: none;
 }
 .header-content {
   position: relative;
@@ -712,7 +707,7 @@ footer .copylight {
 
 .wrapper {
   padding: 0 2rem;
-  padding-top: 180px !important;
+  padding-top: 100px !important;
 }
 @media only screen and (min-width: 1000px) {
   .wrapper {
